assets/style/index.css
/* Decidi usar o reset básico pois um reset mais complexo só teria utilidade se havesse mais elementos no documento. */

/* Reset */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Variáveis para as cores ficarem flexíveis na manuntenção */
:root {
    --bg-color: #F3F5FC;
    --main-color: #0A3871;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: var(--bg-color);
    transition: .5s;
}

.logo {
    position: relative;
}

.logo picture#dark-mode {
    cursor: pointer;
}

img#img-moon {
    opacity: 0;
}

.logo picture#dark-mode img {
    position: absolute;
    width: 22px;
    margin: 0 4rem;
    left: 5px;
    top: 120px;
    transition: .4s;

}

.logo img {
    float: left;
    margin: 2rem 4rem;
}

main {
    display: flex;
    justify-content: space-between;
    height: 100vh;
}


.container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 20%;
    margin-left: 10%;
}

#campo-texto {
    border: none;
    background: transparent;
    font-size: 32px;
    line-height: 48px;
    color: var(--main-color);
}


#campo-texto::-webkit-input-placeholder {
    color: var(--main-color);
    text-transform: lowercase;
}

#campo-texto:focus {
    outline: none;
}

#aviso {
    display: flex;
    align-items: center;
    margin: 15px auto;
    color: #495057;
    font-size: 15px;
}

#aviso p {
    margin-left: 10px;
}

.btns .btn-main {
    padding: 15px 0;
    border-radius: 20px;
    cursor: pointer;
    font-size: 1rem;
    width: 240px;
    transition: .3s ease-in-out;
}

.btns .btn-main:hover {
    box-shadow: 3px 5px 15px #767a8059;
}

.btns #btn-cript {
    background-color: var(--main-color);
    border: 1px solid var(--main-color);
    color: white;
}

.btns #btn-descrip {
    margin-left: 20px;
    background-color: #D8DFE8;
    color: var(--main-color);
    border: 1px solid var(--main-color);
}

.output-container {
    width: 450px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    height: calc(100vh - (40px * 2));
    background-color: white;
    padding: 10px;
    margin: 40px;
    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
    border-radius: 32px;
    text-align: center;
}

.output-container h1 {
    width: 300px;
    margin: 30px auto 20px auto;

    font-weight: bold;
    font-size: 24px;
    line-height: 28.8px;
    color: #343A40;
}

.output-container p {
    width: 250px;
    margin: auto;
}

.active-output {
    display: flex;    
    justify-content: space-between;
}

.active-output span.textUser {
    margin-right: auto;
    padding: 20px;
    color: #495057;
    font-size: 24px;
    line-height: 36px;
}

.active-output button {
    cursor: pointer;
    margin: 0 auto;
    padding: 20px 120px;
    border-radius: 24px;
    background: transparent;
    border: 1px solid var(--main-color);
}


/* Dark Mode */

.active {
    
    display: block !important;
    background-color: #252525;
}

.active #campo-texto,
.active #campo-texto::-webkit-input-placeholder,
.active #campo-texto:focus,
.active #aviso p {
    color: var(--bg-color);
}

.active #logo-alura {
    filter: invert(100%) sepia(100%) hue-rotate(176deg) brightness(104%) contrast(96%);  
}

.active img#img-moon {
    opacity: 1;
}

.active img#img-sun {
    opacity: 0;
}

/* Responsive */

@media screen and (max-width: 1250px) {
    .container {
        margin: 0;
    }
}


@media screen and (max-width: 1100px) {
    .btn-main {
        display: block;
    }

    .btns #btn-cript {
        margin-top: 30px;
    }

    .btns #btn-descrip {
        margin-top: 20px;
        margin-left: 0;
    }

    .output-container {
        /* width: 100%; */
    }
}

@media screen and (max-width: 1050px) {
    .logo img {
        float: none;
    }

    .output-container {
        margin: 0;
    }
    main {
        width: 95%;
        margin: auto;
        position: relative;
        bottom: 75px
    }
}


@media screen and (max-width: 880px) {
    main {
        display: flex;
        flex-direction: column;
        position: inherit;
        height: calc(100vh - 116px);
        width: max-content;
        margin-left: 30px;
    }

    .output-text img {
        display: none;
    }    

    .output-container {
        height: max-content;
        padding: 50px;
        margin: 50px 0;
    }

    .btns {
        padding-top: 150px;
    }

    .btns .btn-main {
        display: flex;
        text-align: center;
        justify-content: center;
    }
}

